--- a/src/css/sidebar.css
+++ b/src/css/sidebar.css
@@ -1,23 +1,32 @@
 .sidebar-main {
   background-color: #011627 !important;
   border-right: 1px solid #5f7e97 !important; }
-
-.filetree-link,
-.sidebar-panel-link {
-  background-color: #011627 !important;
-  color: rgba(255, 255, 255, 0.8) !important; }
-  .filetree-link:hover,
-  .sidebar-panel-link:hover {
-    background-color: #5f7e97 !important; }
-    .filetree-link:hover span,
-    .filetree-link:hover i.fa,
-    .sidebar-panel-link:hover span,
-    .sidebar-panel-link:hover i.fa {
+  .sidebar-main .sidebar-element .sidebar-element-icon-inner {
+    border: 1px solid rgba(255, 255, 255, 0.8) !important; }
+    .sidebar-main .sidebar-element .sidebar-element-icon-inner i.fa {
       color: rgba(255, 255, 255, 0.8) !important; }
+  .sidebar-main .sidebar-element span {
+    color: rgba(255, 255, 255, 0.8) !important; }
+  .sidebar-main .sidebar-element:hover .sidebar-element-icon-inner {
+    background-color: #5f7e97 !important; }
+  .sidebar-main .sidebar-element.selected .sidebar-element-icon-inner {
+    background-color: #5f7e97 !important;
+    border: 1px solid rgba(255, 255, 255, 0.8) !important; }
+    .sidebar-main .sidebar-element.selected .sidebar-element-icon-inner i.fa {
+      color: rgba(255, 255, 255, 0.8) !important; }
+  .sidebar-main .sidebar-element.selected span {
+    color: rgba(255, 255, 255, 0.8) !important; }
+  .sidebar-main .sidebar-element.selected:hover .sidebar-element-icon-inner {
+    background-color: #5f7e97 !important;
+    border: 1px solid rgba(255, 255, 255, 0.8) !important; }
+    .sidebar-main .sidebar-element.selected:hover .sidebar-element-icon-inner i.fa {
+      color: rgba(255, 255, 255, 0.8) !important; }
+  .sidebar-main .sidebar-element.selected:hover span {
+    color: rgba(255, 255, 255, 0.8) !important; }
 
 .ft-panel {
-  background-color: #011627 !important;
   color: rgba(255, 255, 255, 0.8) !important;
+  background-color: #011627 !important;
   border-right: 1px solid #5f7e97 !important; }
 
 .ui-resizable-handle {
@@ -27,35 +36,11 @@
   background-color: #011627 !important;
   border: none !important; }
 
-.sidebar-element .sidebar-element-icon-inner {
-  border: 1px solid rgba(255, 255, 255, 0.8) !important; }
-  .sidebar-element .sidebar-element-icon-inner i.fa {
-    color: rgba(255, 255, 255, 0.8) !important; }
-
-.sidebar-element span {
+.sidebar-panel-link {
+  background-color: #011627 !important;
   color: rgba(255, 255, 255, 0.8) !important; }
-
-.sidebar-element:hover .sidebar-element-icon-inner {
-  background-color: #5f7e97 !important; }
-
-.sidebar-element.selected .sidebar-element-icon-inner {
-  background-color: #5f7e97 !important;
-  border: 1px solid rgba(255, 255, 255, 0.8) !important; }
-  .sidebar-element.selected .sidebar-element-icon-inner i.fa {
-    color: rgba(255, 255, 255, 0.8) !important; }
-
-.sidebar-element.selected span {
-  color: rgba(255, 255, 255, 0.8) !important; }
-
-.sidebar-element.selected:hover .sidebar-element-icon-inner {
-  background-color: #5f7e97 !important;
-  border: 1px solid rgba(255, 255, 255, 0.8) !important; }
-  .sidebar-element.selected:hover .sidebar-element-icon-inner i.fa {
-    color: rgba(255, 255, 255, 0.8) !important; }
-
-.sidebar-element.selected:hover span {
-  color: rgba(255, 255, 255, 0.8) !important; }
-
-span.history-author-text,
-span.clear-history-entry {
-  color: rgba(255, 255, 255, 0.8) !important; }
+  .sidebar-panel-link:hover {
+    background-color: #5f7e97 !important; }
+    .sidebar-panel-link:hover span,
+    .sidebar-panel-link:hover i.fa {
+      color: rgba(255, 255, 255, 0.8) !important; }
