--- a/src/scss/index.scss
+++ b/src/scss/index.scss
@@ -1,15 +1,15 @@
-@import "./body";
-@import "./cell";
-@import "./context-bar";
-@import "./data-panel";
-@import "./editor";
-@import "./filebrowser-panel";
-@import "./help-menu";
-@import "./history-panel";
-@import "./markdown";
-@import "./search-panel";
-@import "./shortcuts";
-@import "./sidebar";
-@import "./topbar";
-@import "./user-menu";
-@import "./widget";
+@import './body';
+@import './cell';
+@import './context-bar';
+@import './data-panel';
+@import './editor';
+@import './filebrowser-panel';
+@import './help-menu';
+@import './history-panel';
+@import './markdown';
+@import './search-panel';
+@import './shortcuts';
+@import './sidebar';
+@import './topbar';
+@import './user-menu';
+@import './widget';
